@@ -1,3 +1,8 @@
+Tue Aug  8 23:19:35 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>
+
+	* Patch from Tillsan for "add rectangle" and the start of some
+	object property code.
+
 Tue Aug  8 18:51:07 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>
 
 	* Seperated resize modes from alignment modes. API cleanup.
